# libodraw

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libodraw-wiki.ini  libodraw.ini  libodraw.pc.in  libodraw.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  syncwinflexbison.ps1
.github/workflows/: build.yml  build_freebsd.yml  build_shared.yml
.travis/: before_install.sh  runtests.sh  script.sh  script_docker.sh
documentation/: CUE sheet format.asciidoc  Optical disc RAW format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libodraw.h.in
include/libodraw/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libodraw/: Makefile.am  libodraw.c  libodraw.rc.in  libodraw_codepage.h  libodraw_cue_parser.y  libodraw_cue_scanner.l  libodraw_data_file.c  libodraw_data_file.h  libodraw_data_file_descriptor.c  libodraw_data_file_descriptor.h  libodraw_debug.c  libodraw_debug.h  libodraw_definitions.h.in  libodraw_error.c  libodraw_error.h  libodraw_extern.h  libodraw_handle.c  libodraw_handle.h  libodraw_io_handle.c  libodraw_io_handle.h  libodraw_libbfio.h  libodraw_libcaes.h  libodraw_libcdata.h  libodraw_libcerror.h  libodraw_libclocale.h  libodraw_libcnotify.h  libodraw_libcpath.h  libodraw_libcstring.h  libodraw_libuna.h  libodraw_metadata.c  libodraw_metadata.h  libodraw_notify.c  libodraw_notify.h  libodraw_sector_range.c  libodraw_sector_range.h  libodraw_support.c  libodraw_support.h  libodraw_track_value.c  libodraw_track_value.h  libodraw_types.h  (+1 more)
macosx/: Introduction.rtf.in  Makefile.am  Readme.rtf
macosx/libodraw.pmdoc/: 01bin.xml.in  02include.xml.in  03lib.xml.in  04share.xml.in  index.xml.in
manuals/: Makefile.am  libodraw.3  odrawinfo.1
msvscpp/: Makefile.am  libodraw.sln
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libodraw/: libodraw.vcproj
msvscpp/libodraw_dll/: libodraw_dll.vcproj
msvscpp/odraw_test_cue_parser/: odraw_test_cue_parser.vcproj
msvscpp/odraw_test_data_file/: odraw_test_data_file.vcproj
msvscpp/odraw_test_data_file_descriptor/: odraw_test_data_file_descriptor.vcproj
msvscpp/odraw_test_error/: odraw_test_error.vcproj
msvscpp/odraw_test_get_version/: odraw_test_get_version.vcproj
msvscpp/odraw_test_handle/: odraw_test_handle.vcproj
msvscpp/odraw_test_io_handle/: odraw_test_io_handle.vcproj
msvscpp/odraw_test_notify/: odraw_test_notify.vcproj
msvscpp/odraw_test_open_close/: odraw_test_open_close.vcproj
msvscpp/odraw_test_read/: odraw_test_read.vcproj
msvscpp/odraw_test_sector_range/: odraw_test_sector_range.vcproj
msvscpp/odraw_test_seek/: odraw_test_seek.vcproj
msvscpp/odraw_test_set_ascii_codepage/: odraw_test_set_ascii_codepage.vcproj
msvscpp/odraw_test_support/: odraw_test_support.vcproj
msvscpp/odraw_test_track_value/: odraw_test_track_value.vcproj
msvscpp/odrawinfo/: odrawinfo.vcproj
msvscpp/odrawverify/: odrawverify.vcproj
odrawtools/: Makefile.am  byte_size_string.c  byte_size_string.h  digest_hash.c  digest_hash.h  info_handle.c  info_handle.h  log_handle.c  log_handle.h  odrawinfo.c  odrawoutput.c  odrawoutput.h  odrawtools_getopt.c  odrawtools_getopt.h  odrawtools_i18n.h  odrawtools_libbfio.h  odrawtools_libcerror.h  odrawtools_libclocale.h  odrawtools_libcnotify.h  odrawtools_libcsplit.h  odrawtools_libcstring.h  odrawtools_libcsystem.h  odrawtools_libhmac.h  odrawtools_libodraw.h  odrawtools_libuna.h  odrawtools_output.c  odrawtools_output.h  odrawtools_signal.c  odrawtools_signal.h  odrawtools_system_split_string.h  odrawtools_unused.h  odrawverify.c  process_status.c  process_status.h  storage_media_buffer.c  storage_media_buffer.h  verification_handle.c  verification_handle.h
ossfuzz/: Makefile.am  handle_fuzzer.cc  ossfuzz_libodraw.h
po/: ChangeLog
tests/: Makefile.am  input  odraw_test_cue_parser.c  odraw_test_data_file.c  odraw_test_data_file_descriptor.c  odraw_test_error.c  odraw_test_functions.c  odraw_test_functions.h  odraw_test_get_version.c  odraw_test_getopt.c  odraw_test_getopt.h  odraw_test_handle.c  odraw_test_io_handle.c  odraw_test_libbfio.h  odraw_test_libcerror.h  odraw_test_libclocale.h  odraw_test_libcnotify.h  odraw_test_libcstring.h  odraw_test_libcsystem.h  odraw_test_libcthreads.h  odraw_test_libodraw.h  odraw_test_libuna.h  odraw_test_macros.h  odraw_test_memory.c  odraw_test_memory.h  odraw_test_notify.c  odraw_test_open_close.c  odraw_test_read.c  odraw_test_sector_range.c  odraw_test_seek.c  odraw_test_set_ascii_codepage.c  odraw_test_support.c  odraw_test_track_value.c  odraw_test_unused.h  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  (+9 more)
tests/data/: cue_parser.1  cue_parser.2  cue_parser.3  cue_parser.4  cue_parser.5
