EXTRA_DIST = \
	libodraw.pmdoc/01bin.xml.in \
	libodraw.pmdoc/01bin-contents.xml \
	libodraw.pmdoc/02include.xml.in \
	libodraw.pmdoc/02include-contents.xml \
	libodraw.pmdoc/03lib.xml.in \
	libodraw.pmdoc/03lib-contents.xml \
	libodraw.pmdoc/04share.xml.in \
	libodraw.pmdoc/04share-contents.xml \
	libodraw.pmdoc/index.xml \
	libodraw.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libodraw.pmdoc/01bin.xml
	/bin/rm -f libodraw.pmdoc/02include.xml
	/bin/rm -f libodraw.pmdoc/03lib.xml
	/bin/rm -f libodraw.pmdoc/04share.xml
	/bin/rm -f libodraw.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

