MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libhmac/libhmac.vcproj \
	libodraw/libodraw.vcproj \
	libuna/libuna.vcproj \
	odraw_test_error/odraw_test_error.vcproj \
	odraw_test_notify/odraw_test_notify.vcproj \
	odraw_test_open_close/odraw_test_open_close.vcproj \
	odraw_test_read/odraw_test_read.vcproj \
	odraw_test_seek/odraw_test_seek.vcproj \
	odraw_test_set_ascii_codepage/odraw_test_set_ascii_codepage.vcproj \
	odraw_test_support/odraw_test_support.vcproj \
	odrawinfo/odrawinfo.vcproj \
	odrawverify/odrawverify.vcproj \
	libodraw.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

