MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libhmac/libhmac.vcproj \
	libodraw/libodraw.vcproj \
	libuna/libuna.vcproj \
	odraw_test_data_file/odraw_test_data_file.vcproj \
	odraw_test_error/odraw_test_error.vcproj \
	odraw_test_handle/odraw_test_handle.vcproj \
	odraw_test_notify/odraw_test_notify.vcproj \
	odraw_test_support/odraw_test_support.vcproj \
	odraw_test_track_value/odraw_test_track_value.vcproj \
	odrawinfo/odrawinfo.vcproj \
	odrawverify/odrawverify.vcproj \
	libodraw.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

